Section catagory overlay CSS tweaks
Increased opacity and changed colors.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,7 +2820,7 @@
 				display: block;
 				height: 100%;
 				left: 0;
-				opacity: 0.85;
+				opacity: 0.4;
 				position: absolute;
 				width: 100%;
 				z-index: 2;
@@ -2859,11 +2859,11 @@
 			}
 
 			.tiles article:nth-child(6n - 5):before {
-				background-color: #6fc3df;
+				background-color: #000000;
 			}
 
 			.tiles article:nth-child(6n - 4):before {
-				background-color: #8d82c4;
+				background-color: #f39bc2;
 			}
 
 			.tiles article:nth-child(6n - 3):before {
@@ -3142,7 +3142,7 @@
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #2a2f4a;
+		background-color: transparent;
 		box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.15);
 		cursor: default;
 		font-weight: 600;
