--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,12 +2,6 @@
 @import url(weather-icons.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
-/*
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -1609,18 +1603,6 @@
 
 	@-ms-viewport {
 		width: device-width;
-	}
-
-	body {
-		-ms-overflow-style: scrollbar;
-	}
-
-	@media screen and (max-width: 480px) {
-
-		html, body {
-			min-width: 320px;
-		}
-
 	}
 
 	body {
@@ -3339,10 +3321,6 @@
 
 /* Banner */
 
-	.colour {
-
-	}
-
 	#banner {
 		-moz-align-items: center;
 		-webkit-align-items: center;
@@ -3389,6 +3367,8 @@
 			top: 0;
 			width: 100%;
 			z-index: 1;
+			background-color: rgba(0, 0, 0, 0.5);
+			border-radius: 5px;
 		}
 
 		#banner h1 {
@@ -3431,11 +3411,6 @@
 				-ms-align-items: center;
 				align-items: center;
 				margin: 0 0 2em 0;
-				text-shadow:
-				-1px -1px 0 #343434,  
-				1px -1px 0 #343434,
-				-1px 1px 0 #343434,
-				1px 1px 0 #343434;
 			}
 
 				#banner > .inner .content > * {
