--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3367,7 +3367,12 @@
 			top: 0;
 			width: 100%;
 			z-index: 1;
-			background-color: rgba(0, 0, 0, 0.5);
+			background: 
+			linear-gradient(
+			  to top,
+			  rgba(0, 0, 0, 0),
+			  rgba(0, 0, 0, 0.6)
+			);
 			border-radius: 5px;
 		}
 
