--- a/recipes/assets/css/recipes.css
+++ b/recipes/assets/css/recipes.css
@@ -2648,7 +2648,7 @@
 					height: 100%;
 					opacity: 1.0;
 					z-index: 1;
-					opacity: 0.8;
+					opacity: 0.6;
 				}
 
 
@@ -2718,7 +2718,11 @@
 						margin-bottom: 0;
 					}
 
-			.tiles article.style1 > .image:before {
+			.tiles article.breakfast1 > .image:before {
+				background-image: linear-gradient(to top right, #d9a7c7 0%, #fffcdc 100%);
+			}
+
+			.tiles article.lunch1 > .image:before {
 				background-image: linear-gradient(to top right, #A1FFCE 0%, #FAFFD1 100%);
 			}
 
