--- a/recipes/assets/css/recipes.css
+++ b/recipes/assets/css/recipes.css
@@ -2518,8 +2518,8 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #f2849e !important;
-			box-shadow: inset 0 0 0 2px #f2849e;
+			color: #a8e063 !important;
+			box-shadow: inset 0 0 0 2px #a8e063;
 		}
 
 		input[type="submit"]:active,
@@ -2767,11 +2767,11 @@
 			}
 
 			.tiles article.lunch4 > .image:before {
-				background-image: linear-gradient(to top right, #5A3F37 0%, #2C7744 100%);
+				background-image: linear-gradient(to top right, #5A3F37 0%, #f2fcfe 100%);
 			}
 
 			.tiles article.lunch5 > .image:before {
-				background-image: linear-gradient(to top right, #4B1248 0%, #F0C27B 100%);
+				background-image: linear-gradient(to top right, #FFAFBD 0%, #F0C27B 100%);
 			}
 
 			.tiles article.lunch6 > .image:before {
